Poems and word locations save in db with user information.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -99,6 +99,10 @@
   border: 2px #ccc solid;
  }
 
+ .poem-id {
+  display: none;
+ }
+
  /*-------------------------------------------------------------------------------------------------
  Buttons
  -------------------------------------------------------------------------------------------------*/
