--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <nav class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1><a href="/">BlastOff</a></h1>
+        <h1><a href="/">Magnetic Poetry</a></h1>
       </li>
     </ul>
 
